# cloud-robotics-monitor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  feature-spec.md
infra/: docker-compose.yml
infra/grafana/dashboards/: robot-telemetry.json
infra/grafana/provisioning/dashboards/: default.yml
infra/grafana/provisioning/datasources/: postgres.yml
infra/postgres/: init.sql
scripts/: verify_mqtt.py
services/ingest/: Dockerfile  README.md  main.py  models.py  requirements.txt
services/simulator/: Dockerfile  README.md  main.py
