[project]
name = "cloud-robotics-monitor"
version = "0.0.1"
description = "Cloud-ready monitoring and analytics platform for industrial robots (learning project)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Gesche Held" }]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
